Fix javadoc + jmh invocation w/ Java11+